# clem_training

./: CMakeLists.txt  package.xml
urdf/: clem_description.urdf.xacro
